# market_aiogram

./: .flake8  .gitignore  Makefile  config.py  main.py  pyproject.toml  testing.py
bot/buttons/: __init__.py  sub_menus.py  texts.py
bot/filters/: __init__.py  admin.py
bot/handlers/: __init__.py
bot/handlers/private/: menu.py  products.py  refferal.py  settings.py
bot/handlers/private/admin/: __init__.py  menu.py  products.py
bot/inlinemode/: __init__.py  products.py
bot/states/: __init__.py  admin_state.py
bot/utils/: __init__.py  auth.py
database/: __init__.py  base.py
database/models/: __init__.py  orders.py  shops.py  users.py
migrations/: env.py
web/: __init__.py  web_app.py
